[package]
name = "radix"
version = "0.1.0"
authors = ["nbliznashki <nikifor.c.bliznashki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rayon="1.3.1"
rand = "0.7.3"
concat-idents = "1.0.0"
ahash = "0.4.4"
#packed_simd="0.3.3"
# bumpalo = { version = "3.4.0", features = ["collections"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
